[gd_scene load_steps=3 format=2]

[ext_resource path="res://CM/UI/FieldDefinitionItem.gd" type="Script" id=1]
[ext_resource path="res://CM/UI/DataInput/ValueSelector.gd" type="Script" id=2]

[node name="FieldDefinitionItem" type="HBoxContainer" groups=["field"]]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FieldName" type="LineEdit" parent="."]
margin_right = 160.0
margin_bottom = 38.0
rect_min_size = Vector2( 160, 0 )

[node name="FieldNameLabel" type="Label" parent="."]
visible = false
margin_left = 124.0
margin_top = 5.0
margin_right = 244.0
margin_bottom = 19.0
rect_min_size = Vector2( 160, 0 )
text = "name"

[node name="FieldType" type="OptionButton" parent="."]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 38.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 2 )

[node name="FieldSubType" type="OptionButton" parent="."]
margin_left = 328.0
margin_right = 488.0
margin_bottom = 38.0
rect_min_size = Vector2( 160, 0 )
disabled = true
script = ExtResource( 2 )

[node name="DefaultValue" type="LineEdit" parent="."]
margin_left = 492.0
margin_right = 652.0
margin_bottom = 38.0
rect_min_size = Vector2( 160, 0 )

[node name="DefaultValueOptionButton" type="OptionButton" parent="."]
visible = false
margin_left = 656.0
margin_right = 816.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
hint_tooltip = "Do not set the default value if you want this field to be nullable."
script = ExtResource( 2 )

[node name="DefaultValueLabel" type="Label" parent="."]
visible = false
margin_left = 656.0
margin_top = 5.0
margin_right = 816.0
margin_bottom = 19.0
rect_min_size = Vector2( 160, 0 )

[node name="DefaultValueCheckBox" type="CheckBox" parent="."]
visible = false
margin_left = 656.0
margin_right = 680.0
margin_bottom = 24.0

[node name="DefaultValueColor" type="ColorPickerButton" parent="."]
visible = false
margin_left = 656.0
margin_right = 816.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )

[node name="RemoveButton" type="Button" parent="."]
margin_left = 656.0
margin_right = 720.0
margin_bottom = 38.0
text = "Remove"

[node name="EmitChangedLabel" type="Label" parent="."]
margin_left = 724.0
margin_top = 12.0
margin_right = 816.0
margin_bottom = 26.0
hint_tooltip = "Whether the changed signal should be emitted whenever value of this field changes on a resource."
mouse_filter = 0
text = "Emit changed?"

[node name="EmitChangedCheckBox" type="CheckBox" parent="."]
margin_left = 820.0
margin_right = 844.0
margin_bottom = 38.0

[node name="Node" type="Node" parent="."]

[node name="DeletionConfirmationDialog" type="ConfirmationDialog" parent="Node"]
margin_left = 7.0
margin_top = 65.0
margin_right = 491.0
margin_bottom = 123.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."
dialog_text = "Do you really want to drop this field? All relevant data will be lost as well."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingletonDictionaryValueSpec" type="HBoxContainer" parent="."]
visible = false
margin_left = 848.0
margin_right = 1548.0
margin_bottom = 24.0

[node name="ValueType" type="OptionButton" parent="SingletonDictionaryValueSpec"]
margin_right = 160.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 2 )

[node name="ValueSubtype" type="OptionButton" parent="SingletonDictionaryValueSpec"]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
disabled = true
script = ExtResource( 2 )

[node name="DefaultValue" type="LineEdit" parent="SingletonDictionaryValueSpec"]
margin_left = 328.0
margin_right = 488.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )

[node name="DefaultValueOptionButton" type="OptionButton" parent="SingletonDictionaryValueSpec"]
margin_left = 492.0
margin_right = 652.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 2 )

[node name="DefaultValueColor" type="ColorPickerButton" parent="SingletonDictionaryValueSpec"]
margin_left = 656.0
margin_right = 668.0
margin_bottom = 24.0

[node name="DefaultValueCheckBox" type="CheckBox" parent="SingletonDictionaryValueSpec"]
margin_left = 672.0
margin_right = 696.0
margin_bottom = 24.0

[node name="DefaultValueLabel" type="Label" parent="SingletonDictionaryValueSpec"]
margin_left = 700.0
margin_top = 5.0
margin_right = 700.0
margin_bottom = 19.0

[node name="SingletonReferenceValueLock" type="OptionButton" parent="."]
visible = false
margin_left = 848.0
margin_right = 1008.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 2 )

[node name="SetgetForce" type="PanelContainer" parent="."]
margin_left = 848.0
margin_right = 1079.0
margin_bottom = 38.0

[node name="SetgetContainer" type="HBoxContainer" parent="SetgetForce"]
margin_left = 7.0
margin_top = 7.0
margin_right = 224.0
margin_bottom = 31.0

[node name="ForceSetterCheckBox" type="CheckBox" parent="SetgetForce/SetgetContainer"]
margin_right = 105.0
margin_bottom = 24.0
text = "Force Setter"

[node name="ForceGetterCheckBox" type="CheckBox" parent="SetgetForce/SetgetContainer"]
margin_left = 109.0
margin_right = 217.0
margin_bottom = 24.0
text = "Force Getter"

[connection signal="text_changed" from="FieldName" to="." method="_on_FieldName_text_changed"]
[connection signal="item_selected" from="FieldType" to="." method="_on_FieldType_item_selected"]
[connection signal="item_selected" from="FieldSubType" to="." method="_on_FieldSubType_item_selected"]
[connection signal="text_changed" from="DefaultValue" to="." method="_on_DefaultValue_text_changed"]
[connection signal="item_selected" from="DefaultValueOptionButton" to="." method="_on_DefaultValueOptionButton_item_selected"]
[connection signal="toggled" from="DefaultValueCheckBox" to="." method="_on_DefaultValueCheckBox_toggled"]
[connection signal="color_changed" from="DefaultValueColor" to="." method="_on_DefaultValueColor_color_changed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="toggled" from="EmitChangedCheckBox" to="." method="_on_EmitChangedCheckBox_toggled"]
[connection signal="confirmed" from="Node/DeletionConfirmationDialog" to="." method="_on_DeletionConfirmationDialog_confirmed"]
[connection signal="item_selected" from="SingletonDictionaryValueSpec/ValueType" to="." method="_on_ValueType_item_selected"]
[connection signal="item_selected" from="SingletonDictionaryValueSpec/ValueSubtype" to="." method="_on_ValueSubtype_item_selected"]
[connection signal="text_changed" from="SingletonDictionaryValueSpec/DefaultValue" to="." method="_on_DefaultValue_subvalue_text_changed"]
[connection signal="item_selected" from="SingletonDictionaryValueSpec/DefaultValueOptionButton" to="." method="_on_DefaultValueOptionButton_subvalue_item_selected"]
[connection signal="color_changed" from="SingletonDictionaryValueSpec/DefaultValueColor" to="." method="_on_DefaultValueColor_subvalue_color_changed"]
[connection signal="toggled" from="SingletonDictionaryValueSpec/DefaultValueCheckBox" to="." method="_on_DefaultValueCheckBox_subvalue_toggled"]
[connection signal="item_selected" from="SingletonReferenceValueLock" to="." method="_on_SingletonReferenceValueLock_item_selected"]
[connection signal="toggled" from="SetgetForce/SetgetContainer/ForceSetterCheckBox" to="." method="_on_ForceSetterCheckBox_toggled"]
[connection signal="toggled" from="SetgetForce/SetgetContainer/ForceGetterCheckBox" to="." method="_on_ForceGetterCheckBox_toggled"]
